[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/GUI/PlayerReadyContainer.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/Checkmark.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/AI.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/Player.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/CloseIcon.png" type="Texture" id=5]

[node name="PlayerReadyContainer1" type="HBoxContainer"]
margin_right = 480.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 32 )
rect_rotation = -0.00563189
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
modulate = Color( 0.764706, 0.196078, 0.196078, 1 )
margin_top = 9.0
margin_right = 339.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Bit Buckets"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 343.0
margin_right = 480.0
margin_bottom = 32.0
alignment = 2

[node name="RobotIcon" type="TextureRect" parent="HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
hint_tooltip = "AI Controlled"
texture = ExtResource( 3 )

[node name="PlayerIcon" type="TextureRect" parent="HBoxContainer"]
visible = false
margin_right = 32.0
margin_bottom = 32.0
hint_tooltip = "Player Controlled"
texture = ExtResource( 4 )

[node name="Ready" type="Label" parent="HBoxContainer"]
margin_left = 36.0
margin_top = 9.0
margin_right = 101.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Not Ready"
align = 2

[node name="ReadyCheck" type="TextureRect" parent="HBoxContainer"]
visible = false
modulate = Color( 0.764706, 0.196078, 0.196078, 1 )
margin_left = 371.0
margin_right = 403.0
margin_bottom = 32.0
texture = ExtResource( 2 )

[node name="NotReady" type="TextureRect" parent="HBoxContainer"]
modulate = Color( 0.764706, 0.196078, 0.196078, 1 )
margin_left = 105.0
margin_right = 137.0
margin_bottom = 32.0
texture = ExtResource( 5 )
